# func-class

./: pyproject.toml
class/: access_hidden.py  access_method.py  class_data.py  class_field.py  class_method_dynamic.py  class_prop.py  class_slot.py  classmethod_basic.py  classmethod_factory.py  classmethod_static.py  classvar_basic.py  classvar_singleton.py  container_basic.py  data_asdict.py  data_fields.py  data_list.py  delegate_basic.py  except_context.py  iter_basic.py  iter_prime.py  mixin_basic.py  polymo_abstract.py  polymo_abstract2.py  polymo_isinstance.py  reverse_call.py  reverse_eq.py  reverse_eq_inherit.py  reverse_hash.py  reverse_hash2.py  reverse_str.py
function/: args_higher.py  call_lambda.py  call_recursive.py  deco_cache.py  figure.py  gen_basic.py  gen_exp.py  gen_from.py  gen_prime.py  gen_send.py  import_from.py  import_from2.py  tuple_named.py
function/mypack/: app.py  hoge.py  lib.py  util.py
function/mypack/mysub/: hoge.py
