[tool.poetry]
name = "func-class"
version = "0.1.0"
description = ""
authors = ["insilicomab <nakada.mitsutaka.c76@kyoto-u.jp>"]
readme = "README.md"
packages = [{include = "func_class"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.1"
requests = "^2.29.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
